syntax = "proto3";

service MenuService {
    rpc Sync (IKafkaReq) returns (IKafkaRes) {}
    rpc FetchMenu (IFetchMenu) returns (IMenu) {}
}

message IKafkaReq {
    required string set = 1;
    optional IAerospike as = 2;
    optional ICms cms = 3;
    optional ISdm sdm = 4;
    optional IMdb mdb = 5;
    required int32 count = 6;
}

message IAerospike {
    optional bool create = 1;
    optional bool update = 2;
    optional bool reset = 3;
    optional bool get = 4;
    required string argv = 5;
}

message ICms {
    optional bool create = 1;
    optional bool update = 2;
    optional bool reset = 3;
    optional bool get = 4;
    required string argv = 5;
}

message ISdm {
    optional bool create = 1;
    optional bool update = 2;
    optional bool reset = 3;
    optional bool get = 4;
    required string argv = 5;
}

message IMdb {
    optional bool create = 1;
    optional bool update = 2;
    optional bool reset = 3;
    optional bool get = 4;
    required string argv = 5;
}

message IKafkaRes {
    required string data = 1;
}

message IFetchMenu {
    required string country = 1;
    required bool isDefault = 2;
}

message IMenu {
    required string menu = 1;
}